# isu14-repro-lstack

./: .gitignore  Gemfile  README.md  codespace-spec.txt  package.json  pyproject.toml
doc/: codespace-spec.txt  gitverb.txt  goal.txt  intro-localstack.txt
