[tool.poetry]
name = "isu14-repro-lstack"
version = "0.1.0"
description = ""
authors = ["ririumu <33805628+ririumu@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
localstack = "^4.0.3"
awscli-local = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
